fix: grid layout issues

--- a/src/assets/editor.module.css
+++ b/src/assets/editor.module.css
@@ -2,9 +2,12 @@
 .container {
     display: grid;
     grid-template-columns: auto 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto minmax(0,1fr);
     row-gap: 2px;
     column-gap: 0;
+    grid-template-areas: 
+        ".    head"
+        "line body";
 
     width: 100%;
     height: 100%;
@@ -33,16 +36,18 @@
 
 /* header view */
 .header-view {
-    width: 100%;
+    grid-area: head;
+
+    /*width: grid - 1fr */
     height: auto;
 
     select {
-        /*width: 100%;*/
 
         margin: 0;
         outline: none;
         padding: 2px;
 
+        font-family: monospace;
         font-size: var(--comfy-textarea-font-size);
         background: var(--comfy-input-bg);
         color: var(--input-text);
@@ -51,10 +56,12 @@
 
 /* lineno view */
 .lineno-view {
+    grid-area: line;
+
     position: relative;
 
     width: fit-content;
-    /* height: script control */
+    /* height: script control - Proportional to textarea clientHeight */
 
     margin: 0;
     border: none;
@@ -66,7 +73,7 @@
     pre {
         width: fit-content;
         min-width: 8px;
-        /* height: script control */
+        /* height: script control - Proportional to textarea scrollHeight */
 
         margin: 0;
     }
@@ -74,14 +81,23 @@
 
 /* body container */
 .body-container {
+    grid-area: body;
+
     position: relative;
     
-    width: 100%;
-    height: 100%;
+    /* width: grid - 1fr */
+    /* height: grid - 1fr */
+    
+    margin: 0;
+    border: none;
+    padding: 0;
 
     /* textarea */
-    textarea {
+    > textarea {
         position: absolute;
+
+        left: 0;
+        top: 0;
 
         width: 100%;
         height: 100%;
@@ -92,6 +108,7 @@
 
         overflow-x: auto;
         overflow-y: auto;
+
         white-space: nowrap;
 
         background: transparent;
@@ -104,8 +121,11 @@
 .highlight-view {
     position: absolute;
 
-    /* width: script control */
-    /* height: script control */
+    left: 0;
+    top: 0;
+
+    /* width: script control - Proportional to textarea clientWidth */
+    /* height: script control - Proportional to textarea clientHeight */
 
     margin: 0;
     border: none;
@@ -115,8 +135,8 @@
     overflow-y: hidden;
 
     pre {
-        /* width: script control */
-        /* height: auto */
+        /* width: script control - Proportional to textarea scrollWidth */
+        height: auto;
 
         margin: 0;
     }
@@ -125,6 +145,9 @@
 /* suggestion view */
 .suggestion-view {
     position: absolute;
+
+    /* left: script control - Proportional to textarea caret left */
+    /* top: script control - Proportional to textarea caret bottom */
 
     width: fit-content;
     height: auto;
